--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Validate Terraform
         run: |
           cd ./${{ inputs.terraformPath }} && \
-          terraform init --reconfigure --backend-config=backends/development.tf && \
+          terraform init && \
           terraform validate
